cargo-features = ["strip"]
[package]
name = "ntsetinformationthread_bypass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dllmain-rs = { git = "https://github.com/BudiNverse/dllmain-rs" }
winapi = { version = "0.3.9", features = ["minwindef",
    "consoleapi",
    "libloaderapi",
    "errhandlingapi",
    "memoryapi",
    "winnt",
    "psapi",
    "processthreadsapi",
    "debugapi",
    "windef"] }
thiserror = "1.0.30"
detour = "0.8.0"
ntapi = "0.3.6"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"