cargo-features = ["strip"]
[package]
edition = "2021"
name = "ntsetinformationthread_bypass"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
detour = "0.8.0"
dllmain-rs = {git = "https://github.com/BudiNverse/dllmain-rs"}
ntapi = "0.3.6"
thiserror = "1.0.30"
winapi = {version = "0.3.9", features = [
  "consoleapi",
  "libloaderapi",
  "windef",
]}

[lib]
crate-type = ["cdylib"]

[profile.release]
# codegen-units = 1 -- enable this if u want smaller binaries
# lto = true
opt-level = "z"
panic = "abort"
strip = true
